fixed overflow in x direction

--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,9 @@ body::after {
   z-index: -1;
 }
 
+body{
+  overflow-x: hidden;
+}
 body .App {
   height: 100%;
   margin: 0;
@@ -58,7 +61,7 @@ body .App {
 }
 body {
   background-image: url("./Assets/lightbulb.jpg");
-  height: 500px;
+  /* height: 500px; */
   /* background-position:  righ bottom;
   background-repeat: no-repeat;
   background-size: 100% auto; */
@@ -116,6 +119,7 @@ body {
 /* body{
   /* hr tag */
   hr.style-eight {
+    
     overflow: visible; /* For IE */
     margin-top: -9em;
     padding: 0;
